# build_workout_dashboard

./: .gitignore  Build Exercise Dashboard.ipynb  Build MySQL Db.ipynb  Build mysql DB.ipynb  Extract_Position_Data.ipynb  PyAutoGui for TCX.ipynb  README.md  dash.py  dashboard.py  dashboard2.py  dashboard_revised.py  init.py  pyproject.toml  requirements.txt  schema_sweat.sql  sweat_workout_summary.sql
.github/workflows/: main.yml
build_workout_dashboard/: dash.py  dashboard.py  download_tcx_files.py  main.py  session_manager.py  style_config.json  test_persistence.py  update_db.py  user2632022_workout_history_MED.csv  user2632022_workout_history_NEWEST.csv  user2632022_workout_history_OLD.csv  utilities.py
