[tool.poetry]
name = "build-workout-dashboard"
version = "0.1.0"
description = "Barb's project to create a workflow for an exercise dashboard based on my personal data for SQL practice, dashboarding, and more."
authors = ["BarbHS <barbs@balex.com>"]
package-mode = true
readme = "README.md"

#[tool.poetry.dev-dependencies]
#IF DEPLOYING ON PROD, THIS IS HOW TO INSTALL: > poetry install --no-dev

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.dependencies]
python = "^3.10"
toml = "^0.10.2"
mysql-connector-python = "^9.1.0"
pandas = "^2.2.3"
numpy = "^2.1.2"

[tool.project]
input_filename = "user2632022_workout_history.csv"
isDev = true

[tool.project.database]
host = "localhost"
port = 3306
username = "barbs"
password = "barbs"
