[tool.poetry]
name = "build-workout-dashboard"
version = "0.1.0"
description = "Project to build a Workout Dashboard with an end-to-end workflow encompassing data ingestion, cleaning, storing, transforming, and managing of that data. Goals: SQL practice, data visualization, insight generation, and more."
authors = ["Barbara Hidalgo <barbs@balex.com>"]
package-mode = true
readme = "README.md"

#[tool.poetry.dev-dependencies]
#IF DEPLOYING ON PROD, THIS IS HOW TO INSTALL: > poetry install --no-dev

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.dependencies]
python = "^3.10"
toml = "^0.10.2"
pymysql = "^1.1.0"
pandas = "^2.2.3"
numpy = "^2.1.2"
streamlit = "^1.35.0"
plotly = "^5.24.0"

[tool.project]
input_filename = "user2632022_workout_history.csv"
debug = true
